# tardigrade_abaqus_tools

./: .gitignore  .gitlab-ci.yml  CD.sh  CMakeLists.txt  README.md  README.rst  environment.txt  jenkins_deploy.sh  jenkins_job_creation.md  jenkins_job_xml.md  reduced_environment.txt  set_vars.sh
.github/workflows/: github-test.yml
configuration_files/: config.xml.jenkins_pr_builder  config.xml.multiagent_deploy_yellow  config.xml.multiagent_pr_builder  environment.yml
docs/: CMakeLists.txt  api.rst  bitbucket_setup.txt  build.txt  changelog.rst  conf.py  conf.py.in  dependencies.txt  index.rst  jenkins_pr_builder.txt  jenkins_version_control.txt  project_brief.txt  release_philosophy.rst  targets.txt  user.rst
modulefiles/: abaqus_tools-env  tardigrade_abaqus_tools-env
recipe/: meta.yaml
src/cpp/: CMakeLists.txt  abaqus_tools.h  cpp_stub.cpp  cpp_stub.h  tardigrade_abaqus_tools.h  umat.h
src/cpp/tests/: CMakeLists.txt  test_abaqus_tools.cpp  test_cpp_stub.cpp  test_tardigrade_abaqus_tools.cpp
